Lists
# 1. puthon program to interchange 1st and last element in a list?

L1=[1,2,3,4,5,6,7]
L1[0],L1[-1]=L1[-1],L1[0]
print("list after interchanging:",L1)
list after interchanging: [7, 2, 3, 4, 5, 6, 1]
# 2. pyton program to swap to elements in a list?
L=[1,4,6,3,7]
L[1],L[2]=L[2],L[1]
print("list after swaping:",L)
list after swaping: [1, 6, 4, 3, 7]
# 3. python program to swap elements in string list?
str=["cat","dog","elephant","horse"]
str[0],str[1]=str[1],str[0]
print("string list after swaping:",str)
string list after swaping: ['dog', 'cat', 'elephant', 'horse']
# 4. way tto find length of list?
l=[6,3,7,3,7,6,2,6]
print(len(l))
8
# 5. max of two numbers in  python?
A=input("a=")
B=input("b=")
if A>B:
    print("A is maximum : ",A)
else:
    print("B is maximum :",B)
a=5
b=6
B is maximum : 6
# 6. min of two numbers in  python?
A=input("a=")
B=input("b=")
if A<B:
    print("A is minimum : ",A)
else:
    print("B is minimum :",B)
a=8
b=5
B is minimum : 5
# 7. way to check if element exists in list?
L2=[3,6,2,7,4,9]
a=int(input("enter number : "))
if a in L2:
    print("exsists")
else:
    print("does not exsists")
enter number : 6
exsists
# 8. 
# POP METHOD 1
l=[46,33,68,22,96,21]
l.pop()
print(l)
# POP METHOD 2
l=[46,33,68,22,96,21]
l.pop(4)
print(l)

#DELETE METHOD 
l=[46,33,68,22,96,21]
del l[4]
print(l)
l=[46,33,68,22,96,21]
del l[:]
print(l)

#CLEAR METHOD
l=[46,33,68,22,96,21]
l.clear()
[46, 33, 68, 22, 96]
[46, 33, 68, 22, 21]
[46, 33, 68, 22, 21]
[]
# 9. revering a list?
animals=["cat","dog","elephant","horse"]
animals.reverse()
print(animals)
['horse', 'elephant', 'dog', 'cat']
# 10. cloning or copying a list?
list=[13,54,76,65,23,68,22]
# 11. count ocurrences of an element in list
animals=["cat","dog","elephant","horse"]
print(animals.count("dog"))
1
# 12. to find sum and avg of list?
l=[1,2,3,4,5,6,7]
print(sum(l))
print(sum(l)/len(l))
28
4.0
# 13. sum of digit in list
L=[2,54,65,22,56,78]
print(sum(L))
277
# 14. multiply numbers in list?
import math
L=[1,2,3,4,5]
multi=math.prod(L)
print(multi)
120
# 15. min value in list?
L=[2,6,7,4,8]
print(min(L))
2
# 16. max in list?
L=[1,7,8,5,4]
print(max(L))
8
# 17. find sec largest value?
L=[23,64,12,87,44]
L.sort()
print(L)
s=L[-2]
print("sec largest num : ",s)
[12, 23, 44, 64, 87]
sec largest num :  64
# 18. check even num?
A=int(input("enter number :"))
if A%2==0:
    print("its an even number !!")
else:
    print("its an odd number!!")
enter number :45
its an odd number!!
# 19. check odd num?
A=int(input("enter number :"))
if A%2!=0:
    print("its an odd number !!")
else:
    print("its an even number!!")
enter number :55
its an odd number !!
#20. print even num in range?
A=int(input("enter number till end :"))
i=2
for i in range(2,A+1,2):
    print(i)
enter number till end :24
2
4
6
8
10
12
14
16
18
20
22
24
# 21.  print odd num in range?
A=int(input("enter number till end : "))
i=1
for i in range(1,A,2):
    print(i)
enter number till end : 23
1
3
5
7
9
11
13
15
17
19
21
# 22. count add and even num in list?
L=[13,45,76,34,12,31]
a,b=0,0
for i in L:
    if i%2==0:
        a=i+1
    else:
        b=b+1
print("even number in the list:",a)
print("odd number in the list:",b)
even number in the list: 13
odd number in the list: 3
# 23. print positive num in list?
L=[1,7,6,-4,3,-9]
def pos_num():
    for p in L:
        if p>0:
            print(p)
pos_num()
1
7
6
3
# 24. print negative num in list?
L=[1,7,6,-4,3,-9]
def neg_num():
    for N in L:
        if N<0:
            print(N)
neg_num()
-4
-9
# 25. print positive num in range?
a=int(input("enter a num :"))
def pos_num():
    for L in range (0,a+1,2):
        print(L)
pos_num()
enter a num :11
0
2
4
6
8
10
# 26. print negative num in range?
a=int(input("enter a num :"))
def neg_num():
    for L in range (0,a+1,1):
        print(L)
neg_num()
enter a num :23
0
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
# 27. count positive and negative num in list?
L=[34,21,12,43,11,15,17]
pos,neg=0,0
for i in L:
    if i>0:
        pos=pos+1
    else:
        neg=neg+1
print(pos)
print(neg)
7
0
# 28. remove multiple elements from a list?
L=[12,32,65,21,43,76,65,67]
del L[3:6]
print(L)
[12, 32, 65, 65, 67]
# 29. remove empty tuple from list?
L=[(2,4),(6,5),(),(7,4),()]
new_list=[]
for tup in L:
    if tup:
    L.append(tup)
print(L)
  Cell In[1], line 6
    L.append(tup)
    ^
IndentationError: expected an indented block after 'if' statement on line 5
# 30. print duplicate in a list?
L=[1,31,54,26,13,11,3,31,1,54,22,22]
